# props2

./: .gitignore  CMakeLists.txt  INSTALL.md  MANIFEST.in  README.md  pyproject.toml  setup.py
src/: CMakeLists.txt  props2.cpp  props2.h  props_test.cpp  pybind11.cpp  rapidjson
src/rapidjson/: document.h
src/rapidjson-1.1.0/include/rapidjson/: allocators.h  document.h
v2/: CMakeLists.txt  json_lex.cpp  json_lex.h  json_parse.cpp  json_parse.h  json_parser.cpp  props2.cpp  props2.h  props_test.cpp  pybind11.cpp
